调整一下结构

--- a/DotFramework/DotFrame/DotEngine/DotEngine.csproj
+++ b/DotFramework/DotFrame/DotEngine/DotEngine.csproj
@@ -54,20 +54,23 @@
     <Compile Include="Framework\Notify\INotifier.cs" />
     <Compile Include="Framework\Notify\INotifyServicer.cs" />
     <Compile Include="Framework\Notify\Notification.cs" />
-    <Compile Include="Framework\Service\Net\IClientNetServicer.cs" />
-    <Compile Include="Framework\Service\Net\IServerNetServicer.cs" />
-    <Compile Include="Framework\Service\Timer\ITimerServicer.cs" />
-    <Compile Include="Framework\Updater.cs" />
+    <Compile Include="Framework\Proxy\IProxy.cs" />
+    <Compile Include="Framework\Proxy\IProxyCenter.cs" />
+    <Compile Include="Framework\Proxy\ProxyCenter.cs" />
+    <Compile Include="Framework\Services\Net\IClientNetService.cs" />
+    <Compile Include="Framework\Services\Net\IServerNetService.cs" />
+    <Compile Include="Framework\Services\Timer\ITimerService.cs" />
+    <Compile Include="Framework\Services\Update\IUpdateService.cs" />
+    <Compile Include="Framework\Services\Update\UpdateService.cs" />
     <Compile Include="Generic\ListDictionary.cs" />
     <Compile Include="Generic\UniqueID.cs" />
     <Compile Include="Generic\UniqueIntID.cs" />
     <Compile Include="Pool\ObjectPool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Framework\Service\IServicer.cs" />
-    <Compile Include="Framework\Service\IServicerCenter.cs" />
-    <Compile Include="Framework\Service\Log\ILogServicer.cs" />
-    <Compile Include="Framework\Service\Servicer.cs" />
-    <Compile Include="Framework\Service\ServicerCenter.cs" />
+    <Compile Include="Framework\Services\IService.cs" />
+    <Compile Include="Framework\Services\IServiceCenter.cs" />
+    <Compile Include="Framework\Services\Log\ILogService.cs" />
+    <Compile Include="Framework\Services\ServiceCenter.cs" />
     <Compile Include="Utilities\ArrayUtility.cs" />
     <Compile Include="Utilities\AssemblyUtility.cs" />
     <Compile Include="Utilities\BitUtil.cs" />
