添加service，同时调整结构

--- a/DotFramework/PureMVCWPF/DotMVCS/DotMVCS.csproj
+++ b/DotFramework/PureMVCWPF/DotMVCS/DotMVCS.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{F225C2EB-7E07-4F29-89C8-67551ADA8C91}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DotMVCS</RootNamespace>
+    <RootNamespace>DotEngine.Framework</RootNamespace>
     <AssemblyName>DotMVCS</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -43,10 +43,15 @@
   <ItemGroup>
     <Compile Include="Controller.cs" />
     <Compile Include="Model.cs" />
+    <Compile Include="Service\IService.cs" />
+    <Compile Include="Service\IServiceCenter.cs" />
+    <Compile Include="Service\ServiceCenter.cs" />
+    <Compile Include="Service\Service.cs" />
+    <Compile Include="Update\IUpdate.cs" />
     <Compile Include="View.cs" />
     <Compile Include="Interfaces\ICommand.cs" />
     <Compile Include="Interfaces\IController.cs" />
-    <Compile Include="Interfaces\IFacade.cs" />
+    <Compile Include="Facade\IFacade.cs" />
     <Compile Include="Interfaces\IMediator.cs" />
     <Compile Include="Interfaces\IModel.cs" />
     <Compile Include="Interfaces\INotification.cs" />
@@ -64,5 +69,6 @@
     <Compile Include="Proxy\Proxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
