--- a/DotFramework/PureMVCWPF/PureMVCWPF/PureMVCWPF.csproj
+++ b/DotFramework/PureMVCWPF/PureMVCWPF/PureMVCWPF.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DotMVCS\DotEngine.Framework.csproj" />
+    <ProjectReference Include="..\DotEngine.Framework\DotEngine.Framework.csproj" />
   </ItemGroup>
 
 </Project>
