调整Logger的实现，添加使用Unity的控制台输出日志及添加使用Log4net输出日志

--- a/DotFramework/DotEngine.Timer/DotEngine.Timer.csproj
+++ b/DotFramework/DotEngine.Timer/DotEngine.Timer.csproj
@@ -47,5 +47,11 @@
     <Compile Include="TimerTask.cs" />
     <Compile Include="TimerWheel.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotEngine\DotEngine.csproj">
+      <Project>{fb66a876-d598-498c-8dbd-bec7cc13c40d}</Project>
+      <Name>DotEngine</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
