--- a/DotFramework/DotEditor.Asset/DotEditor.Asset.csproj
+++ b/DotFramework/DotEditor.Asset/DotEditor.Asset.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>e74c270b-7138-44d2-9a82-e8538396e3d5</ProjectGuid>
+    <ProjectGuid>{E74C270B-7138-44D2-9A82-E8538396E3D5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DotEditor.Asset</RootNamespace>
@@ -31,24 +31,30 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="AssetAddress\AssetAddressFilter.cs" />
+    <Compile Include="AssetAddress\AssetAddressGroup.cs" />
+    <Compile Include="AssetAddress\AssetAddressGroupEditor.cs" />
+    <Compile Include="AssetAddress\AssetAddressOperation.cs" />
+    <Compile Include="AssetAddress\AssetAddressUtil.cs" />
+    <Compile Include="AssetPacker\AssetAddressRepeatPopupContent.cs" />
+    <Compile Include="AssetPacker\AssetPackerConfig.cs" />
+    <Compile Include="AssetPacker\AssetPackerTreeView.cs" />
+    <Compile Include="AssetPacker\AssetPackerUtil.cs" />
+    <Compile Include="AssetPacker\AssetPackerWindow.cs" />
+    <Compile Include="AssetPacker\BundleBuildConfig.cs" />
+    <Compile Include="AssetPacker\BundleBuildPipeline.cs" />
+    <Compile Include="AssetPacker\IAssetBundlePacker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
- </Project>
+</Project>
