--- a/DotFramework/DotEngine.Log/DotEngine.Log.csproj
+++ b/DotFramework/DotEngine.Log/DotEngine.Log.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D591F905-D0E8-4519-BF84-BE984BF9FC78}</ProjectGuid>
+    <ProjectGuid>{66AA6B81-B885-44B8-B471-4F104FF97A03}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DotEngine.Asset</RootNamespace>
-    <AssemblyName>DotEngine.Asset</AssemblyName>
+    <RootNamespace>DotEngine.Log</RootNamespace>
+    <AssemblyName>DotEngine.Log</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net">
+      <HintPath>..\libs\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,34 +42,21 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnityEngine">
+      <HintPath>..\libs\UnityEngine.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssetBridge.cs" />
-    <Compile Include="AssetConst.cs" />
-    <Compile Include="AssetLoader\AAssetLoader.cs" />
-    <Compile Include="AssetLoader\AAssetNode.cs" />
-    <Compile Include="AssetLoader\AAsyncOperation.cs" />
-    <Compile Include="AssetLoader\AssetHandler.cs" />
-    <Compile Include="AssetLoader\AssetLoaderData.cs" />
-    <Compile Include="AssetManager.cs" />
-    <Compile Include="AssetManager_Clean.cs" />
-    <Compile Include="AssetManager_Scene.cs" />
-    <Compile Include="AssetUtil.cs" />
-    <Compile Include="BundleLoader\BundleAssetNode.cs" />
-    <Compile Include="BundleLoader\BundleAsyncOperation.cs" />
-    <Compile Include="BundleLoader\BundleLoader.cs" />
-    <Compile Include="BundleLoader\BundleNode.cs" />
-    <Compile Include="BundleLoader\BundleSceneLoader.cs" />
-    <Compile Include="DatabaseLoader\DatabaseAssetNode.cs" />
-    <Compile Include="DatabaseLoader\DatabaseAsyncOperation.cs" />
-    <Compile Include="DatabaseLoader\DatabaseLoader.cs" />
-    <Compile Include="DatabaseLoader\DatabaseSceneLoader.cs" />
-    <Compile Include="Datas\AssetAddressConfig.cs" />
-    <Compile Include="Datas\AssetBundleConfig.cs" />
+    <Compile Include="Log4NetLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SceneLoader\ASceneLoader.cs" />
-    <Compile Include="SceneLoader\SceneHandler.cs" />
-    <Compile Include="SceneLoader\SceneLoaderData.cs" />
+    <Compile Include="UnityConsoleAppender.cs" />
+    <Compile Include="UnityLogger.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotEngine\DotEngine.csproj">
+      <Project>{fb66a876-d598-498c-8dbd-bec7cc13c40d}</Project>
+      <Name>DotEngine</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
