重新规范GameObject缓存池的类名及包名

--- a/DotFramework/DotEngine.GOPool/DotEngine.GOPool.csproj
+++ b/DotFramework/DotEngine.GOPool/DotEngine.GOPool.csproj
@@ -39,14 +39,27 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnityEngine">
+      <HintPath>..\libs\UnityEngine.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GameObjectPool.cs" />
-    <Compile Include="GameObjectPoolConst.cs" />
-    <Compile Include="GameObjectPoolGroup.cs" />
-    <Compile Include="GameObjectPoolItem.cs" />
-    <Compile Include="GameObjectPoolManager.cs" />
+    <Compile Include="Pool.cs" />
+    <Compile Include="PoolConst.cs" />
+    <Compile Include="PoolGroup.cs" />
+    <Compile Include="PoolItem.cs" />
+    <Compile Include="PoolManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotEngine.Timer\DotEngine.Timer.csproj">
+      <Project>{efa7e737-1185-4147-8488-77812f580678}</Project>
+      <Name>DotEngine.Timer</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DotEngine\DotEngine.csproj">
+      <Project>{fb66a876-d598-498c-8dbd-bec7cc13c40d}</Project>
+      <Name>DotEngine</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
