--- a/DotFramework/DotEngine.Asset/DotEngine.Asset.csproj
+++ b/DotFramework/DotEngine.Asset/DotEngine.Asset.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\libs\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,6 +43,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnityEngine">
+      <HintPath>..\libs\UnityEngine.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssetBridge.cs" />
@@ -67,6 +74,16 @@
     <Compile Include="SceneLoader\ASceneLoader.cs" />
     <Compile Include="SceneLoader\SceneHandler.cs" />
     <Compile Include="SceneLoader\SceneLoaderData.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DotEngine\DotEngine.csproj">
+      <Project>{fb66a876-d598-498c-8dbd-bec7cc13c40d}</Project>
+      <Name>DotEngine</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PriorityQueue\PriorityQueue\PriorityQueue.csproj">
+      <Project>{ecbdfa0f-fed1-40ab-883d-f4a28245e418}</Project>
+      <Name>PriorityQueue</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
