独立生成Framework的库

--- a/DotFramework/DotEditor/DotEditor.csproj
+++ b/DotFramework/DotEditor/DotEditor.csproj
@@ -83,6 +83,59 @@
     <Compile Include="GUIExtension\Toolbar\EditorToolbarExtend.cs" />
     <Compile Include="GUIExtension\Toolbar\EditorToolbarItem.cs" />
     <Compile Include="GUIExtension\Windows\PopupWindow.cs" />
+    <Compile Include="NativeDrawer\AttrNativeDrawer.cs" />
+    <Compile Include="NativeDrawer\CustomAttributeDrawerAttribute.cs" />
+    <Compile Include="NativeDrawer\CustomTypeDrawerAttribute.cs" />
+    <Compile Include="NativeDrawer\Decorator\BoxedHeaderDrawer.cs" />
+    <Compile Include="NativeDrawer\Decorator\ButtonDrawer.cs" />
+    <Compile Include="NativeDrawer\Decorator\DecoratorDrawer.cs" />
+    <Compile Include="NativeDrawer\Decorator\HelpDrawer.cs" />
+    <Compile Include="NativeDrawer\Decorator\SeparatorLineDrawer.cs" />
+    <Compile Include="NativeDrawer\Decorator\SpaceLineDrawer.cs" />
+    <Compile Include="NativeDrawer\DefaultDrawer\DefaultBoolDrawer.cs" />
+    <Compile Include="NativeDrawer\DefaultDrawer\DefaultBoundsDrawer.cs" />
+    <Compile Include="NativeDrawer\DefaultDrawer\DefaultEnumDrawer.cs" />
+    <Compile Include="NativeDrawer\DefaultDrawer\DefaultFloatDrawer.cs" />
+    <Compile Include="NativeDrawer\DefaultDrawer\DefaultIntDrawer.cs" />
+    <Compile Include="NativeDrawer\DefaultDrawer\DefaultListDrawer.cs" />
+    <Compile Include="NativeDrawer\DefaultDrawer\DefaultRectDrawer.cs" />
+    <Compile Include="NativeDrawer\DefaultDrawer\DefaultStringDrawer.cs" />
+    <Compile Include="NativeDrawer\DefaultDrawer\DefaultUnityObjectDrawer.cs" />
+    <Compile Include="NativeDrawer\DefaultDrawer\DefaultVector2Drawer.cs" />
+    <Compile Include="NativeDrawer\DefaultDrawer\DefaultVector3Drawer.cs" />
+    <Compile Include="NativeDrawer\Layout\BeginGroupDrawer.cs" />
+    <Compile Include="NativeDrawer\Layout\BeginHorizontalDrawer.cs" />
+    <Compile Include="NativeDrawer\Layout\BeginIndentDrawer.cs" />
+    <Compile Include="NativeDrawer\Layout\EndGroupDrawer.cs" />
+    <Compile Include="NativeDrawer\Layout\EndHorizontalDrawer.cs" />
+    <Compile Include="NativeDrawer\Layout\EndIndentDrawer.cs" />
+    <Compile Include="NativeDrawer\Layout\LayoutDrawer.cs" />
+    <Compile Include="NativeDrawer\Listener\ListenerDrawer.cs" />
+    <Compile Include="NativeDrawer\Listener\OnValueChangedDrawer.cs" />
+    <Compile Include="NativeDrawer\NativeDrawerEditor.cs" />
+    <Compile Include="NativeDrawer\NativeDrawerObject.cs" />
+    <Compile Include="NativeDrawer\NativeDrawerProperty.cs" />
+    <Compile Include="NativeDrawer\NativeDrawerSetting.cs" />
+    <Compile Include="NativeDrawer\NativeDrawerUtility.cs" />
+    <Compile Include="NativeDrawer\NativeTypeDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\Control\IndentDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\Control\ReadonlyDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\EnumButtonDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\FloatSliderDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\Label\HideLabelDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\Label\NewLabelDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\MultilineTextDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\OpenFilePathDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\OpenFolderPathDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\PropertyDrawer.cs" />
+    <Compile Include="NativeDrawer\Property\StringPopupDrawer.cs" />
+    <Compile Include="NativeDrawer\Verification\NotNullDrawer.cs" />
+    <Compile Include="NativeDrawer\Verification\VerificationDrawer.cs" />
+    <Compile Include="NativeDrawer\Visible\HideDrawer.cs" />
+    <Compile Include="NativeDrawer\Visible\HideIfDrawer.cs" />
+    <Compile Include="NativeDrawer\Visible\ShowDrawer.cs" />
+    <Compile Include="NativeDrawer\Visible\ShowIfDrawer.cs" />
+    <Compile Include="NativeDrawer\Visible\VisibleDrawer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\AssetDatabaseUtility.cs" />
     <Compile Include="Utilities\DirectoryUtility.cs" />
