--- a/DotFramework/DotEngine.FSM/DotEngine.FSM.csproj
+++ b/DotFramework/DotEngine.FSM/DotEngine.FSM.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6CD1DF6A-F498-4A2D-8A10-2C5D2E3CE2BC}</ProjectGuid>
+    <ProjectGuid>{FB2CBAC1-8CBE-40ED-87D7-165978EECDED}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dot.AI</RootNamespace>
-    <AssemblyName>DotAI</AssemblyName>
+    <RootNamespace>DotEngine.AI.FSM</RootNamespace>
+    <AssemblyName>DotEngine.FSM</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -23,7 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>none</DebugType>
+    <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
@@ -41,21 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FSM\StateBase.cs" />
-    <Compile Include="FSM\StateEventArgs.cs" />
-    <Compile Include="FSM\StateMachine.cs" />
-    <Compile Include="FSM\Token.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StateBase.cs" />
+    <Compile Include="StateEventArgs.cs" />
+    <Compile Include="StateMachine.cs" />
+    <Compile Include="Token.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\DotContext\DotContext\DotContext.csproj">
-      <Project>{f67355fc-787b-4c59-8cc6-6b1deb433722}</Project>
-      <Name>DotContext</Name>
+    <ProjectReference Include="..\DotEngine.Context\DotEngine.Context.csproj">
+      <Project>{973ba58f-3fd4-4a7d-aeee-c9e0f135b12a}</Project>
+      <Name>DotEngine.Context</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
-  </PropertyGroup>
 </Project>
