--- a/DotFramework/DotEngine.Config/DotEngine.Config.csproj
+++ b/DotFramework/DotEngine.Config/DotEngine.Config.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D7353C36-ACA8-454D-8A61-E3707EFE5CE5}</ProjectGuid>
+    <ProjectGuid>{BE7F795A-D5B8-4558-942E-85F3A59DDC0F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Dot.Config</RootNamespace>
-    <AssemblyName>DotConfig</AssemblyName>
+    <RootNamespace>DotEngine.Config</RootNamespace>
+    <AssemblyName>DotEngine.Config</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,9 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Ini\IniConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
